--- a/pom.xml
+++ b/pom.xml
@@ -386,6 +386,25 @@
                     <mavenExecutorId>forked-path</mavenExecutorId>
                 </configuration>
             </plugin>
+            
+            
+            	<plugin>
+	    <groupId>org.pitest</groupId>
+	    <artifactId>pitest-maven</artifactId>
+	    <version>1.1.9</version>
+	    <configuration>
+	        <targetClasses>
+	            <param>com.netflix.curator.x.*</param>
+	        </targetClasses>
+		<failWhenNoMutations>false</failWhenNoMutations>
+	            <outputFormats>
+	                <outputFormat>XML</outputFormat>
+	                <outputFormat>HTML</outputFormat>                      
+	            </outputFormats>   
+	    </configuration>
+	</plugin>
+
+	
         </plugins>
     </build>
 </project>
